--- a/package.json
+++ b/package.json
@@ -3,26 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.5",
     "classnames": "^2.3.2",
-    "cypress": "^12.9.0",
-    "jest": "^27.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-portal": "^4.2.2",
     "react-scripts": "5.0.1",
     "sass": "^1.59.3",
     "styled-components": "^5.3.9",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "webdriverio": "^8.6.9"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -30,17 +26,10 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:react-hooks/recommended"
     ],
     "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      },
       {
         "files": [
           "**/*.stories.*"
@@ -72,15 +61,25 @@
     "@storybook/react": "^7.0.2",
     "@storybook/react-webpack5": "^7.0.2",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-portal": "^4.0.4",
     "@types/styled-components": "^5.1.26",
+    "axios-mock-adapter": "^1.21.4",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "cypress": "^12.9.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.5.0",
+    "jest-mock-axios": "^4.7.1",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.2",
+    "typescript": "^4.9.5",
+    "webdriverio": "^8.6.9",
     "webpack": "^5.77.0"
   }
 }
