--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-portal": "^4.2.2",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "sass": "^1.59.3",
     "styled-components": "^5.3.9",
