--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-portal": "^4.2.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
     "sass": "^1.59.3",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
